# src/routes/Produto/ProdutoRoutes.js
@@ -5,6 +5,7 @@ const auth = require("../../middlewares/Autenticacao");
 
 const ProdutoController = require('../../controllers/ProdutoController');
 const AnuncioController = require("../../controllers/AnuncioController.js");
+const upload = require('../../middlewares/ImageMulter');
 
 const routes = Router();
 
@@ -21,7 +22,7 @@ routes.get("/:id_produto", auth, ProdutoController.getProdutoByID);
 // Listar anuncios de determinado produto
 routes.get("/:id_produto/anuncio", AnuncioController.getAnuncioByProduto);
 
-routes.post("/:id_produto/imagem", ProdutoController.addFoto);
+routes.post("/:id_produto/imagem", upload.single('image'), ProdutoController.addFoto);
 
 routes.get("/:id_produto/imagem", ProdutoController.getFoto);
 
